[tool.poetry]
name = "yuzu"
version = "0.1.1"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pysen = {version = "^0.9.1", extras = ["lint"]}
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
