[tool.poetry]
name = "yuzu"
version = "0.4.2"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pysen = {version = "^0.9.1", extras = ["lint"]}
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
line_length = 200
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
